# oneuptime

./: .bash_profile  .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DOCKER-README.md  Dockerfile  Fyipe-3.0.0.tgz  Fyipe-3.0.1.tgz  LICENSE  MAINTAINERS  PUSH_NOTIFICATIONS.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.no.md  README.pt.md  README.ru.md  README.sv.md  README.zh-CN.md  README.zh-TW.md  SCIM_PUSH_GROUPS_README.md  SECURITY.md  VERSION  babel.config.js  babel.config.ts  backup.sh  (+57 more)
.claude/: launch.json
.github/: pull_request_template.md
.husky/: pre-commit
.oneuptime/: README.md  config.js
AIAgent/: Config.ts  Dockerfile.tpl  Index.ts  jest.config.json  nodemon.json  package-lock.json  package.json  tsconfig.json
APIReference/: Dockerfile.tpl  Index.ts  Routes.ts  nodemon.json  package-lock.json  package.json
Accounts/: .babelrc  .env  .env.tpl  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.tpl  Index.ts  Serve.ts  config-overrides.js  esbuild.config.js  index.ts  nodemon.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
Accounts-temp/: Dockerfile
AccountsTemp/: .gitignore  Dockerfile  Dockerfile.dev  Index.ts  package.json
AcmeHttp/: index.ts  package-lock.json  package.json  test.ts
Admin-dashboard/: Dockerfile
AdminDashboard/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.tpl  README.md  Serve.ts  esbuild.config.js  index.d.ts  index.ts  nodemon.json  package-lock.json  package.json  vite.config.ts  webpack.config.js
AdminDashboard /: Dockerfile.tpl  nodemon.json
Alert/: .env  .env.tpl  Dockerfile  Dockerfile.dev  Dockerfile.tpl  Index.ts  package-lock.json  package.json  tsconfig.json
Api-docs/: Dockerfile
Api-docs-temp/: package.json
ApiDocs/: .dockerignore  .env  Dockerfile  Dockerfile.dev  Dockerfile.tpl  Index.ts  README.md  index.ts  nodemon.json  package-lock.json  package.json  tsconfig.json
ApiReference/: .env.tpl  Dockerfile.tpl  (+5 more)
PythonSDK/: README.md  requirements.txt  setup.cfg  setup.py
PythonSDK/oneuptime_sdk/oneuptime_sdk/: util.py
PythonSDK/oneuptime_sdk/tests/: testOneUptimeLogger.py
python-sdk/: .gitignore  README.md  README.rst  requirements.txt  setup.cfg  setup.py
python-sdk/fyipe_sdk/: __init__.py  logger.py  logtype.py
python-sdk/fyipe_sdk/fyipe_sdk/: __init__.py  fyipeListener.py  fyipeTransport.py  logger.py  timelineMagager.py  tracker.py  util.py
python-sdk/fyipe_sdk/fyipe_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-sdk/fyipe_sdk/tests/: testFyipeLogger.py  testFyipeTracker.py
python-sdk/oneuptime_sdk/: __init__.py
python-sdk/oneuptime_sdk/oneuptime_sdk/: logger.py  oneuptimeTransport.py  timelineMagager.py
python-sdk/src/fyipe_pkg/: logger.py  logtype.py
python-sdk/tests/: testFyipeLogger.py
(+24852 files in other folders)
