[bumpversion]
current_version = 1.0.0

[metadata]
name = oneuptime_sdk
version = 1.0.0
author = OneUptime Limited.
author_email = hello@oneuptime.com
description = A OneUptime package that tracks error event and send logs from your applications to your oneuptime dashboard.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OneUptime/PythonSDK
project_urls = 
	Bug Tracker = https://github.com/OneUptime/PythonSDK/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= oneuptime_sdk
packages = find:
python_requires = >=3.6

[options.packages.find]
where = oneuptime_sdk

