[metadata]
name = example-pkg-fyipe
version = 0.0.1
author =HackerBay, Inc.
author_email = hello@hackerbay.io
description = Fyipe is a JS package that tracks error event and send logs from your applications to your fyipe dashboard.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.fyipe.com/
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src