[bumpversion]
current_version = 0.0.2

[metadata]
name = sdk-pkg-fyipe
version = 0.0.1
author = HackerBay, Inc.
author_email = hello@hackerbay.io
description = A Fyipe package that tracks error event and send logs from your applications to your fyipe dashboard.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Fyipe/python-sdk
project_urls = 
	Bug Tracker = https://github.com/Fyipe/python-sdk/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

